tests/data/placebo/test_efs_mount_target_public_subnet/ec2.DescribeRouteTables_1.json
{
   "status_code":200,
   "data":{
      "RouteTables":[
         {
            "Associations":[
               {
                  "Main":false,
                  "RouteTableAssociationId":"rtbassoc-0749ea24982503e14",
                  "RouteTableId":"rtb-0790946c364d31f08",
                  "SubnetId":"subnet-01989283067fcc12f",
                  "AssociationState":{
                     "State":"associated"
                  }
               }
            ],
            "PropagatingVgws":[

            ],
            "RouteTableId":"rtb-0790946c364d31f08",
            "Routes":[
               {
                  "DestinationCidrBlock":"10.0.0.0/21",
                  "GatewayId":"local",
                  "Origin":"CreateRouteTable",
                  "State":"active"
               },
               {
                  "DestinationCidrBlock":"0.0.0.0/0",
                  "NatGatewayId":"nat-06e9acaa9c0ab8799",
                  "Origin":"CreateRoute",
                  "State":"active"
               },
               {
                  "DestinationPrefixListId":"pl-00a54069",
                  "GatewayId":"vpce-00cf599081019f56d",
                  "Origin":"CreateRoute",
                  "State":"active"
               },
               {
                  "DestinationPrefixListId":"pl-68a54001",
                  "GatewayId":"vpce-036452b71622c1bf8",
                  "Origin":"CreateRoute",
                  "State":"active"
               }
            ],
            "Tags":[
               {
                  "Key":"Name",
                  "Value":"PrivateRouteTable3"
               },
               {
                  "Key":"xyz:vpc:component:description",
                  "Value":"Routes to local VPC, Internet via NAT Gateway, S3 via VPC Endpoint and if VPN enabled will have routes to QDC/LVDC datacenters"
               },
               {
                  "Key":"xyz:vpc:env",
                  "Value":"learning"
               },
               {
                  "Key":"aws:cloudformation:stack-id",
                  "Value":"arn:aws:cloudformation:us-west-2:644160558196:stack/xyz-vpc-1-RouteTable-1AFSXQCNQF4LN/2e051350-dfd7-11ec-bbab-02b759b22f01"
               },
               {
                  "Key":"aws:cloudformation:stack-name",
                  "Value":"xyz-vpc-1-RouteTable-1AFSXQCNQF4LN"
               },
               {
                  "Key":"xyz:vpc:component:name",
                  "Value":"PrivateRouteTable3"
               },
               {
                  "Key":"aws:cloudformation:logical-id",
                  "Value":"RouteTablePrivate3"
               },
               {
                  "Key":"Type",
                  "Value":"Private"
               },
               {
                  "Key":"xyz:vpc:component:type",
                  "Value":"route"
               },
               {
                  "Key":"xyz:cfn:version",
                  "Value":"2.7.8"
               }
            ],
            "VpcId":"vpc-012347c909f1f1896",
            "OwnerId":"644160558196"
         },
         {
            "Associations":[
               {
                  "Main":false,
                  "RouteTableAssociationId":"rtbassoc-0f4ed0a5e8305821f",
                  "RouteTableId":"rtb-046ba441cf1187b69",
                  "SubnetId":"subnet-059f1e047a5ca7c1f",
                  "AssociationState":{
                     "State":"associated"
                  }
               }
            ],
            "PropagatingVgws":[

            ],
            "RouteTableId":"rtb-046ba441cf1187b69",
            "Routes":[
               {
                  "DestinationCidrBlock":"10.0.0.0/21",
                  "GatewayId":"local",
                  "Origin":"CreateRouteTable",
                  "State":"active"
               },
               {
                  "DestinationCidrBlock":"0.0.0.0/0",
                  "GatewayId":"igw-047f2ff9f61175a8e",
                  "Origin":"CreateRoute",
                  "State":"active"
               },
               {
                  "DestinationPrefixListId":"pl-00a54069",
                  "GatewayId":"vpce-00cf599081019f56d",
                  "Origin":"CreateRoute",
                  "State":"active"
               },
               {
                  "DestinationPrefixListId":"pl-68a54001",
                  "GatewayId":"vpce-036452b71622c1bf8",
                  "Origin":"CreateRoute",
                  "State":"active"
               }
            ],
            "Tags":[
               {
                  "Key":"xyz:vpc:component:name",
                  "Value":"EgressRouteTable1"
               },
               {
                  "Key":"Type",
                  "Value":"Egress"
               },
               {
                  "Key":"xyz:vpc:component:type",
                  "Value":"route"
               },
               {
                  "Key":"Name",
                  "Value":"EgressRouteTable1"
               },
               {
                  "Key":"xyz:cfn:version",
                  "Value":"2.7.8"
               },
               {
                  "Key":"aws:cloudformation:logical-id",
                  "Value":"RouteTableEgress1"
               },
               {
                  "Key":"xyz:vpc:env",
                  "Value":"learning"
               },
               {
                  "Key":"aws:cloudformation:stack-id",
                  "Value":"arn:aws:cloudformation:us-west-2:644160558196:stack/xyz-vpc-1-RouteTable-1AFSXQCNQF4LN/2e051350-dfd7-11ec-bbab-02b759b22f01"
               },
               {
                  "Key":"aws:cloudformation:stack-name",
                  "Value":"xyz-vpc-1-RouteTable-1AFSXQCNQF4LN"
               },
               {
                  "Key":"xyz:vpc:component:description",
                  "Value":"Routes to local VPC, Internet via Internet Gateway and S3 via VPC Endpoint"
               }
            ],
            "VpcId":"vpc-012347c909f1f1896",
            "OwnerId":"644160558196"
         },
         {
            "Associations":[
               {
                  "Main":false,
                  "RouteTableAssociationId":"rtbassoc-0f8c83e0ef16c46b5",
                  "RouteTableId":"rtb-02ddf9ac6ccafbd28",
                  "SubnetId":"subnet-02c40a509d26f8d34",
                  "AssociationState":{
                     "State":"associated"
                  }
               }
            ],
            "PropagatingVgws":[

            ],
            "RouteTableId":"rtb-02ddf9ac6ccafbd28",
            "Routes":[
               {
                  "DestinationCidrBlock":"10.0.0.0/21",
                  "GatewayId":"local",
                  "Origin":"CreateRouteTable",
                  "State":"active"
               }
            ],
            "Tags":[
               {
                  "Key":"Type",
                  "Value":"Data"
               },
               {
                  "Key":"aws:cloudformation:stack-name",
                  "Value":"xyz-vpc-1-RouteTable-1AFSXQCNQF4LN"
               },
               {
                  "Key":"xyz:cfn:version",
                  "Value":"2.7.8"
               },
               {
                  "Key":"xyz:vpc:component:name",
                  "Value":"DataRouteTable2"
               },
               {
                  "Key":"xyz:vpc:component:description",
                  "Value":"Routes to local VPC but if VPN enabled will also have routes to QDC/LVDC datacenters"
               },
               {
                  "Key":"aws:cloudformation:logical-id",
                  "Value":"RouteTableData2"
               },
               {
                  "Key":"xyz:vpc:env",
                  "Value":"learning"
               },
               {
                  "Key":"Name",
                  "Value":"DataRouteTable2"
               },
               {
                  "Key":"aws:cloudformation:stack-id",
                  "Value":"arn:aws:cloudformation:us-west-2:644160558196:stack/xyz-vpc-1-RouteTable-1AFSXQCNQF4LN/2e051350-dfd7-11ec-bbab-02b759b22f01"
               },
               {
                  "Key":"xyz:vpc:component:type",
                  "Value":"route"
               }
            ],
            "VpcId":"vpc-012347c909f1f1896",
            "OwnerId":"644160558196"
         }
      ],
      "ResponseMetadata":{

      }
   }
}
